[package]
name = "slabytes"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
crc32fast = "1.3.2"
rustc-hash = "1.1.0"
sharded-slab = "0.1.4"
tokio = { version = "1.32.0", optional = true }
tracing = "0.1.37"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["rt-multi-thread", "io-util"] }

[features]
default = ["tokio"]
tokio = ["tokio/sync"]
