[package]
name = "slabytes"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
bytes = "1.5.0"
crc32fast = "1.3.2"
rustc-hash = "2.0.0"
sharded-slab = "0.1.7"
tokio = { version = "1.33.0", optional = true }
tracing = "0.1.39"

[dev-dependencies]
tokio = { version = "1.33.0", features = [
    "rt-multi-thread",
    "io-util",
    "macros",
] }

[features]
tokio = ["dep:tokio"]
